--- a/style/tree.css
+++ b/style/tree.css
@@ -1,59 +1,65 @@
+html,
+body,
+#tree-container,
+svg.overlay {
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+	margin: 0;
+	overflow: hidden;
+}
+
+#tree-container {
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-size: 100%;
+	font-weight: bold;
 }
 
 #bio {
-  position: absolute;
-  top:0;
-  left: 0;
-  z-index: 99;
-  padding: 25px;
-  font-family: "Georgia";
-  font-size: 18px;
-  max-width: 850px;
-  line-height: 1.4;
-  text-align: justify;
-  background:rgba(0,0,0,.8);
-  color: white;
-  display: none;
-  box-sizing: border-box;
-  pointer-events:none;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 99;
+	background: rgba(0,0,0,.8);
+	color: white;
+	display: none;
+	pointer-events: none;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#bio.has-image {
-  padding-left: 210px;
-  min-height: 175px;
-}
-
-#bio img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 175px;
-  width: 175px;
+.bioInfo {
+	padding: 10px;
 }
 
 #bio a {
-  text-decoration: none;
-  color: white;
+	color: currentColor;
 }
 
 .node {
-  cursor: pointer;
+	cursor: pointer;
 }
 
-.overlay{
-    background-color: #F7F4F0;
+.overlay {
+	background-color: #F7F4F0;
 }
- 
+
 .node circle {
-  stroke: #E6E2DD;
-  stroke-width: 1.5px;
+	stroke-width: 1.5px;
 }
 
 .childrenCircle {
-	r: 10;
+	stroke: #E6E2DD;
 	transform: translateX(10px);
+}
+
+.marriageCircle {
+	fill: transparent;
+	stroke: pink;
+	transform: translateX(10px);
+	/*pointer-events: none;*/
 }
 
 .noChildren {
@@ -68,16 +74,105 @@ body {
 	fill: lightsteelblue;
 }
 
-.node text {
+/*.node text {
   font-size:11px; 
   font-weight: bold;
   font-family: "Georgia";
   color: #4D3636;
-}
- 
-.link {
-  fill: none;
-  stroke: #E6E2DD;
-  stroke-width: 1.5px;
+}*/
+
+.searchResult text {
+	font-size: 150%;
 }
 
+.link {
+	fill: none;
+	stroke: #E6E2DD;
+	stroke-width: 1.5px;
+}
+
+
+.marriageLink {
+	fill: none;
+	stroke: pink;
+	stroke-width: 1.5px;
+}
+
+div#search {
+	position: absolute;
+	top: 0;
+	right: 0;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	background: #fff;
+	display: flex;
+	padding: 3px;
+}
+
+#q {
+	border: 1px solid #ccc;
+}
+
+.searchButtons {
+	margin-right: 2px;
+	display: flex;
+}
+
+.searchButtons a {
+	cursor: pointer;
+	border: 1px solid #ccc;
+	border-left: 0;
+	padding: 1px 0;
+	line-height: 0;
+}
+
+.searchButtons a:hover {
+	background: #eee;
+}
+
+.searchButtons svg {
+	 width: 1.1em; 
+	height: 1.1em;
+}
+
+.searchCounter {
+	padding: 3px 5px 0;
+	color: #999;
+	font-size: 90%;
+}
+
+.nosearch a {
+	pointer-events: none;
+	opacity: 0.8;
+}
+
+
+.PersonDescription svg {
+	width: 1em;
+	line-height: 0;
+	margin-left: 1em;
+}
+
+div.swal2-popup #swal2-content {
+	text-align: left;
+}
+
+div#swal2-content > div {
+	margin-bottom: 0.7em;
+}
+
+a.PersonName {
+	cursor: pointer;
+	color: #2196f3;
+}
+
+.PersonFullName {
+	font-weight: bold;
+}
+
+span.location {
+	display: block;
+}
+
+a:focus {
+	outline: 1px dotted;
+}
